# subtitle-translator

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
electron/: main.cjs  preload.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: App.tsx
src/components/layout/: Container.tsx  Footer.tsx  Header.tsx  Sidebar.tsx  Stepper.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  GptQuestionModal.tsx  Input.tsx  Select.tsx  Spinner.tsx  index.ts
src/data/presets/: index.ts  knitting.ts
src/features/dashboard/: DashboardTab.tsx
src/features/dictionary/: MemeTab.tsx  TerminologyTab.tsx
src/features/feedback/: FeedbackTab.tsx  index.ts
src/features/history/: HistoryTab.tsx
src/features/multilang/: MultiLangTab.tsx  index.ts
src/features/review/: ReviewTab.tsx  index.ts
src/features/settings/: SettingsTab.tsx
src/features/translate/: TranslateTab.tsx  index.ts
src/lib/: chunker.ts  fileSystem.ts  languages.ts  migration.ts  normalizer.ts  srt.ts  subtitleAnalyzer.ts  terminology.ts  translator.ts
src/stores/: useAppStore.ts  useChannelStore.ts  useDictionaryStore.ts  useKnowledgeStore.ts  useLanguageStore.ts  useProjectStore.ts  useSettingsStore.ts  useStatsStore.ts  useSubtitleStore.ts  useTerminologyStore.ts  useTranslateStore.ts
src/styles/: global.css  index.css
src/styles/base/: global.css  reset.css
src/styles/components/: button.css  card.css  input.css  review.css  sidebar.css
src/types/: channel.ts  electron.d.ts
test-files/: 지그재그요크풀오버_subtitle.txt
(+4 files in other folders)
